--- a/learn-m365-pr/wwl/create-information-barriers-microsoft-365/index.yml
+++ b/learn-m365-pr/wwl/create-information-barriers-microsoft-365/index.yml
@@ -3,21 +3,19 @@ uid: learn.wwl.create-information-barriers-microsoft-365
 metadata:
   title: Create information barriers in Microsoft 365
   description: "Create information barriers in Microsoft 365"
-  ms.date: 06/10/2021
+  ms.date: 06/10/2022
   author: wwlpublish
   ms.author: tfrink
   ms.topic: interactive-tutorial
   ms.prod: learning-m365
 title: Create information barriers in Microsoft 365
-summary: This module examines how Microsoft 365 supports ways to restrict communication and collaboration, including the use of information barriers in Microsoft Teams, SharePoint Online, and OneDrive for Business, and ethical walls in Exchange Online.
+summary: This module examines how Microsoft 365 uses information barriers to restrict communication and collaboration in Microsoft Teams, SharePoint Online, and OneDrive for Business.
 abstract: |
   By the end of this module, you will be able to:
-  - Describe how information barriers can restrict communication and collaboration among specific groups of users when necessary
-  - Describe how information barrier policies help restrict or allow communication and collaboration
-  - Identify the steps necessary to create an information barrier policy
-  - Describe what an ethical wall in Exchange is and how it works
-  - Explain how to create an ethical wall in Exchange
-  - Identify best practices for building and working with ethical walls in Exchange
+  - Describe how information barriers can restrict or allow communication and collaboration among specific groups of users.
+  - Describe the components of an information barrier and how to enable information barriers.
+  - Understand how information barrier modes help strengthen who can be added or removed from a Microsoft Team, OneDrive account, and SharePoint site.
+  - Describe how information barriers prevent users or groups from communicating and collaborating in Microsoft Teams, OneDrive, and SharePoint.
 prerequisites: |
   None
 iconUrl: /learn/achievements/create-information-barriers-in-microsoft-365.svg
@@ -29,20 +27,22 @@ roles:
 - solution-architect
 - technology-manager
 products:
-- azure-active-directory
 - m365
 - office-365
 subjects:
-- communication
-- information-protection-governance
+- cloud-computing
 - cloud-security
+- compliance
+- information-protection-governance
+- security
+- threat-protection
 units:
 - learn.wwl.create-information-barriers-microsoft-365.introduction
-- learn.wwl.create-information-barriers-microsoft-365.explore
-- learn.wwl.create-information-barriers-microsoft-365.define-information-barrier-policies
-- learn.wwl.create-information-barriers-microsoft-365.explore-ethical-walls-exchange-online
-- learn.wwl.create-information-barriers-microsoft-365.create-ethical-wall-using-distribution-groups
-- learn.wwl.create-information-barriers-microsoft-365.examine-best-practices-for-building-ethical-walls
+- learn.wwl.create-information-barriers-microsoft-365.explore-information-barriers
+- learn.wwl.create-information-barriers-microsoft-365.configure-information-barriers
+- learn.wwl.create-information-barriers-microsoft-365.examine-information-barriers-microsoft-teams
+- learn.wwl.create-information-barriers-microsoft-365.examine-information-barriers-onedrive
+- learn.wwl.create-information-barriers-microsoft-365.examine-information-barriers-sharepoint
 - learn.wwl.create-information-barriers-microsoft-365.knowledge-check
 - learn.wwl.create-information-barriers-microsoft-365.summary
 badge:
