changed files by pdets auto publish service, publishid[b6f0ddaf-d243-4795-8cd4-3380f19e0178] and do [publish].

--- a/learn-m365-pr/wwl/monitor-your-microsoft-teams-environment/index.yml
+++ b/learn-m365-pr/wwl/monitor-your-microsoft-teams-environment/index.yml
@@ -3,7 +3,7 @@ uid: learn.wwl.monitor-your-microsoft-teams-environment
 metadata:
   title: Monitor your Microsoft Teams environment
   description: "Learn about different reports and dashboards to monitor your Teams environment, including Microsoft 365 and Teams usage reports, Microsoft Productivity Score, Azure AD access reviews, and Microsoft 365 network connectivity dashboard."
-  ms.date: 10/25/2021
+  ms.date: 06/10/2022
   author: wwlpublish
   ms.author: jennyche
   ms.topic: interactive-tutorial
@@ -12,11 +12,12 @@ title: Monitor your Microsoft Teams environment
 summary: Learn about different reports and dashboards to monitor your Teams environment, including Microsoft 365 and Teams usage reports, Microsoft Productivity Score, Azure AD access reviews, and Microsoft 365 network connectivity dashboard.
 abstract: |
   By the end of this module, you will be able to:
-  - Analyze usage patterns by monitoring Microsoft 365 and Teams usage reports.
-  - Monitor user access by using Azure AD access reviews.
-  - Interpret Microsoft Productivity Score.
-  - Assess network readiness by using Microsoft 365 network connectivity dashboard.
-  - Manage Teams notifications and alerts.
+  * Analyze usage patterns by monitoring Microsoft 365 and Teams usage reports
+  * Interpret Microsoft Productivity Score
+  * Manage user access by using Azure AD access reviews
+  * Assess network readiness by using Microsoft 365 network connectivity dashboard
+  * Manage Teams notifications and alerts   to monitor Teams capabilities and receive alerts
+  * Manage feedback policies
 prerequisites: |
   - A proficient understanding of basic functional experience with Microsoft 365 services.
   - A proficient understanding of general IT practices, including using PowerShell.
@@ -29,9 +30,9 @@ products:
 - m365
 - office-teams
 subjects:
-- data-visualization
 - collaboration
 - communication
+- data-visualization
 units:
 - learn.wwl.monitor-your-microsoft-teams-environment.introduction
 - learn.wwl.monitor-your-microsoft-teams-environment.monitor-usage-reports
@@ -40,6 +41,7 @@ units:
 - learn.wwl.monitor-your-microsoft-teams-environment.manage-user-access-azure-active-directory-access-reviews
 - learn.wwl.monitor-your-microsoft-teams-environment.monitor-microsoft-365-network-connectivity-dashboard
 - learn.wwl.monitor-your-microsoft-teams-environment.manage-teams-notifications-alerts
+- learn.wwl.monitor-your-microsoft-teams-environment.feedback-policies
 - learn.wwl.monitor-your-microsoft-teams-environment.knowledge-check
 - learn.wwl.monitor-your-microsoft-teams-environment.summary
 badge:
