changed files by pdets auto publish service, publishid[71580776-2e4a-4e7a-9e1b-8da24987d09f] and do [publish].

--- a/learn-m365-pr/wwl/plan-teams-phone-system/index.yml
+++ b/learn-m365-pr/wwl/plan-teams-phone-system/index.yml
@@ -9,11 +9,11 @@ metadata:
   ms.topic: interactive-tutorial
   ms.prod: learning-m365
 title: Plan for Teams Phone
-summary: Understanding of what is included in Microsoft Phone System, what is needed to make and receive phone calls, how to plan for phone system devices, phone system features, and planning for cloud voicemail.
+summary: Learn about Microsoft Teams Phone and what is needed to make and receive phone calls, plan for Teams Phone devices, features, and cloud voicemail.
 abstract: |
-  At the end of this module, you will be able to:
-  - Gain an understanding of how to plan for a basic phone system.
-  - Gain an understanding of how to plan for advanced Teams calling options.
+  At the end of this module, you'll be able to:
+  - Plan for a basic Teams Phone deployment.
+  - Plan for advanced Teams Phone calling options.
 prerequisites: |
   - An understanding of Microsoft Teams Client
   - An understanding of Microsoft Teams Phone
