--- a/learn-m365-pr/wwl/plan-teams-phone-system/7-knowledge-check.yml
+++ b/learn-m365-pr/wwl/plan-teams-phone-system/7-knowledge-check.yml
@@ -17,25 +17,25 @@ content: |
 quiz:
   title: "Check your knowledge"
   questions:
-  - content: "An organization wants to migrate to Teams calling. One requirement is to use their existing Session Border Controller. Which of the following technologies would they use?"
+  - content: "An organization wants to migrate to Teams Phone. One requirement is to use their existing Session Border Controller. Which of the following technologies would they use?"
     choices:
-    - content: "Phone System"
+    - content: "Teams Phone"
       isCorrect: false
-      explanation: "That option is not correct. This is a generic term used to describe multiple technologies."
-    - content: "Phone System with Direct Routing"
+      explanation: "That isn't correct. This is a generic term used to describe multiple technologies."
+    - content: "Teams Phone with Direct Routing"
       isCorrect: true
-      explanation: "That option is correct. Phone System with Direct Routing works through Session Border Controllers."
-    - content: "Phone System with Calling Plan"
+      explanation: "That is correct. Teams Phone with Direct Routing works through Session Border Controllers."
+    - content: "Teams Phone with Calling Plan"
       isCorrect: false
-      explanation: "That option is not correct. Phone System with Teams Calling Plans is a technology that does not make use of Session Border Controllers."
+      explanation: "That isn't correct. Teams Phone with Calling Plans is a technology that does not make use of Session Border Controllers."
   - content: "What is the name of the feature that allows for users to share their phone line so that another user can make and receive calls on their behalf?"
     choices:
     - content: "Shared Line Appearance"
       isCorrect: true
-      explanation: "That option is correct. Shared line appearance feature allows for users to share their phone line so that another user can make and receive calls on their behalf."
+      explanation: "That is correct. Shared line appearance feature allows for users to share their phone line so that another user can make and receive calls on their behalf."
     - content: "Device Switching"
       isCorrect: false
-      explanation: "That option is not correct. Device switching lets users play a call or meeting on another HID device that is connected to Teams; for example, switching from their PC speakers to a headset."
+      explanation: "That isn't correct. Device switching lets users play a call or meeting on another HID device that is connected to Teams; for example, switching from their PC speakers to a headset."
     - content: "Federated Calling"
       isCorrect: false
-      explanation: "That option is not correct. Federated Calling lets users securely connect, communicate, and collaborate with users in federated tenants."
+      explanation: "That isn't correct. Federated Calling lets users securely connect, communicate, and collaborate with users in federated tenants."
