--- a/learn-m365-pr/wwl/explore-compliance-microsoft-365/5-examine-compliance-manager-dashboard.yml
+++ b/learn-m365-pr/wwl/explore-compliance-microsoft-365/5-examine-compliance-manager-dashboard.yml
@@ -17,14 +17,14 @@ content: |
 quiz:
   title: "Check your knowledge"
   questions:
-  - content: "Which Compliance Score component defines how an organization assesses and manages system configuration, organizational process, and people accountability to meet a specific requirement of a regulation, standard, or internal policy?"
+  - content: "When an organization comes to Compliance Manager for the first time, what is its initial score based on?"
     choices:
-    - content: "A control"
+    - content: "Microsoft 365 data protection baseline"
       isCorrect: true
-      explanation: "That's correct. A control defines how an organization assesses and manages system configuration, organizational process, and people accountability to meet a specific requirement of a regulation, standard, or internal policy."
-    - content: "An assessment"
+      explanation: "Correct. When an organization comes to Compliance Manager for the first time, its initial score is based on the Microsoft 365 data protection baseline. This baseline assessment, which is available to all organizations, is a set of controls that includes common industry regulations and standards."
+    - content: "Assessments"
       isCorrect: false
-      explanation: "That's incorrect. An assessment is an evaluation of a template that starts the scoring process for an organization. Try again."
-    - content: "A template"
+      explanation: "Incorrect. Assessments show the percentage of an organization's progress in managing assessments for particular compliance and data protection standards, regulations, or laws."
+    - content: "Categories"
       isCorrect: false
-      explanation: "That's incorrect. Templates are used to create custom assessments. Try again."
+      explanation: "Incorrect. Categories show the percentage of an organization's overall score within data protection categories, such as \"protect information\" or \"manage devices.\""
