--- a/learn-m365-pr/wwl/implement-microsoft-purview-insider-risk-management/6-investigate-insider-risk-management-activities-alerts.yml
+++ b/learn-m365-pr/wwl/implement-microsoft-purview-insider-risk-management/6-investigate-insider-risk-management-activities-alerts.yml
@@ -6,7 +6,9 @@ metadata:
   description: "Investigate insider risk management activities and alerts"
   ms.date: 06/10/2022
   author: wwlpublish
+  ms.author: tfrink
   ms.topic: interactive-tutorial
+  ms.prod: learning-m365
 azureSandbox: false
 labModal: false
 durationInMinutes: 10
