--- a/learn-m365-pr/wwl/create-information-barriers-microsoft-365/index.yml
+++ b/learn-m365-pr/wwl/create-information-barriers-microsoft-365/index.yml
@@ -11,11 +11,11 @@ metadata:
 title: Create information barriers in Microsoft 365
 summary: This module examines how Microsoft 365 uses information barriers to restrict communication and collaboration in Microsoft Teams, SharePoint Online, and OneDrive for Business.
 abstract: |
-  By the end of this module, you will be able to:
-  - Describe how information barriers can restrict or allow communication and collaboration among specific groups of users.
-  - Describe the components of an information barrier and how to enable information barriers.
-  - Understand how information barrier modes help strengthen who can be added or removed from a Microsoft Team, OneDrive account, and SharePoint site.
-  - Describe how information barriers prevent users or groups from communicating and collaborating in Microsoft Teams, OneDrive, and SharePoint.
+  By the end of this module, you'll be able to:
+  *   Describe how information barriers can restrict or allow communication and collaboration among specific groups of users.
+  *   Describe the components of an information barrier and how to enable information barriers.
+  *   Understand how information barrier modes help strengthen who can be added or removed from a Microsoft Team, OneDrive account, and SharePoint site.
+  *   Describe how information barriers prevent users or groups from communicating and collaborating in Microsoft Teams, OneDrive, and SharePoint.
 prerequisites: |
   None
 iconUrl: /learn/achievements/create-information-barriers-in-microsoft-365.svg
