--- a/learn-m365-pr/wwl/implement-data-loss-prevention-policies/2-plan-data-loss-prevention.yml
+++ b/learn-m365-pr/wwl/implement-data-loss-prevention-policies/2-plan-data-loss-prevention.yml
@@ -24,7 +24,7 @@ quiz:
       explanation: "Correct. Once an organization has identified its stakeholders and it knows which sensitive information needs protection and where it's used, the stakeholders can set their protection goals, and IT can develop an implementation plan."
     - content: "Complete all implementation prerequisites"
       isCorrect: false
-      explanation: "Incorrect. Before Contoso completes the DLP prerequisites, it should set its protection goals and develop an implementation plan.."
+      explanation: "Incorrect. Before Contoso completes the DLP prerequisites, it should set its protection goals and develop an implementation plan."
     - content: "Create a DLP policy"
       isCorrect: false
       explanation: "Incorrect. Before Contoso starts creating DLP policies, it should set its protection goals and develop an implementation plan."
