--- a/learn-m365-pr/wwl/configure-manage-voice-users/index.yml
+++ b/learn-m365-pr/wwl/configure-manage-voice-users/index.yml
@@ -11,7 +11,7 @@ metadata:
 title: Configure and manage voice users
 summary: Ongoing management is required as new employees start, or if their needs change. Learn how to manage voice user configuration, including enabling voice services and adjusting voice configuration.
 abstract: |
-  After completing this module, you will be able to:
+  After completing this module, you'll be able to:
   - Enable users for Teams Phone and using Calling Plans (or Operator Connect if it’s configured for your tenant).
   - Enable users for Direct Routing.
   - Manage per-user options for Teams Phone.
