--- a/learn-m365-pr/wwl/configure-deploy-manage-teams-devices/8-knowledge-check.yml
+++ b/learn-m365-pr/wwl/configure-deploy-manage-teams-devices/8-knowledge-check.yml
@@ -21,13 +21,13 @@ quiz:
     choices:
     - content: "Microsoft Teams Rooms Premium"
       isCorrect: false
-      explanation: "A Microsoft Teams Rooms Premium license does not add voice-specific capabilities in addition to the Microsoft Teams Rooms Standard license."
+      explanation: "A Microsoft Teams Rooms Premium license doesn't add voice-specific capabilities in addition to the Microsoft Teams Rooms Standard license."
     - content: "Domestic or International Calling Plan"
       isCorrect: false
-      explanation: "A Domestic or International Calling Plan license is not required if Direct Routing is used with Microsoft Teams."
+      explanation: "A Domestic or International Calling Plan license isn't required if Direct Routing is used with Microsoft Teams."
     - content: "Microsoft Teams Rooms Standard"
       isCorrect: true
-      explanation: "A Microsoft Teams Rooms Standard license includes the Phone System license required to use the device with Calling Plans or Direct Routing."
+      explanation: "A Microsoft Teams Rooms Standard license includes the Teams Phone license required to use the device with Calling Plans or Direct Routing."
   - content: "Which method is used to revert Microsoft Teams Android-based device firmware?"
     choices:
     - content: "Select a previous firmware version using Manual Updates in the Teams Admin Center"
@@ -35,15 +35,15 @@ quiz:
       explanation: "Only the current version of the firmware and applicable updates are shown within the Teams Admin Center."
     - content: "A factory reset of the device"
       isCorrect: true
-      explanation: "The firmware cannot be reverted using the Teams Admin Center and a factory reset of the device will revert the firmware to the version that the device was shipped with, or updated to using the vendor's own update procedures."
+      explanation: "The firmware can't be reverted using the Teams Admin Center and a factory reset of the device will revert the firmware to the version that the device was shipped with, or updated to using the vendor's own update procedures."
     - content: "Upload a previous firmware version and apply using Manual Updates in the Teams Admin Center"
       isCorrect: false
-      explanation: "Only the current version of the firmware and applicable updates are shown within the Teams Admin Center. Firmware cannot be uploaded and deployed using the Teams Admin Center."
+      explanation: "Only the current version of the firmware and applicable updates are shown within the Teams Admin Center. Firmware can't be uploaded and deployed using the Teams Admin Center."
   - content: "In which scenario will Azure Active Directory Conditional Access policies allow a user to sign into a Teams Phone?"
     choices:
     - content: "When a Conditional Access policy allows a device enrollment exception for Teams Phones"
       isCorrect: false
-      explanation: "A policy that matches a user signing into a Teams Phone cannot have a specific exception for Teams Phones, therefore an Intune license must be applied and the Teams Phone must register and assert compliance with the policy."
+      explanation: "A policy that matches a user signing into a Teams Phone can't have a specific exception for Teams Phones, therefore an Intune license must be applied and the Teams Phone must register and assert compliance with the policy."
     - content: "Only after remote provisioning has been performed successfully"
       isCorrect: false
       explanation: "Remote provisioning includes the user sign-in process and device registration, which therefore will require pre-requisites for Intune licensing."
