--- a/learn-m365-pr/wwl/configure-teams-phone-system/index.yml
+++ b/learn-m365-pr/wwl/configure-teams-phone-system/index.yml
@@ -11,15 +11,15 @@ metadata:
 title: Configure Teams Phone
 summary: Before Microsoft Teams Phone users can make or receive calls and use advanced features, phone numbers must be assigned and Microsoft Calling plans or Operator Connect must be configured.
 abstract: |
-  At the end of this module, you will be able to:
+  At the end of this module, you'll be able to:
   - Configure Emergency Calling Addresses
   - Manage Microsoft Calling Plan Numbers
   - Configure and Manage Operator Connect Numbers
-  - Understand phone system policies and the features you need to configure them
+  - Understand Teams Phone policies and the features you need to configure them
   - Configure Audio Conferencing and Communication Credits
 prerequisites: |
-  - General knowledge of Teams Phone System and the Teams Admin Center
-  - A general understanding of Office 365
+  - General knowledge of Teams Phone and the Teams Admin Center
+  - A general understanding of Office 365 and Microsoft 365
 iconUrl: /learn/achievements/4-configure-teams-phone-system.svg
 levels:
 - advanced
